2003-04-01  William A. Perkins  <william.perkins@pnl.gov>

	* util/Makefile.am: created

	* util/cart_grid/Makefile.am: created

	* configure.in: include util in build

2003-03-31  William A. Perkins  <william.perkins@pnl.gov>

	* scalars_source.f90: use open_existing

	* met_data_module.f90: use time series module to read and
	interpolate weather data

	* mass2.f90: initialize and shutdown time series module

2003-03-26  William A. Perkins  <william.perkins@pnl.gov>

	* makefile.sgi: was makefile

	* date_time_module.f90: moved to time_series

	* julian.f90: moved to time_series

	* configure.in: added

	* bootstrap.sh: added

	* Makefile.am: added

2003-03-19  William A. Perkins  <william.perkins@pnl.gov>

	* mass2_main_025.f90: repair small depth warning/error messages
	for when wetting and drying is off

2003-03-11  William A. Perkins  <william.perkins@pnl.gov>

	* test/transport/partition/scalar_source.base: added missing quote

	* test/benchmark/mcn-test/results.txt: some tests with the intel
	compiler. 

	* mass2_main_025.f90: rearrange computation of transport equation
	coefficients 

	* makefile.intel: do not worry about module files -- all
	dependencies are on object files

	* README: added instructions for NetCDF

2003-01-31  William A. Perkins  <william.perkins@pnl.gov>

	* makefile.lahey: created

	* makefile.intel: created

	* makefile.linux: include a way to compile for condor standard
	universe 

2003-01-28  William A. Perkins  <william.perkins@pnl.gov>

	* date_time_module.f90: do not assume the length of date_string
	and time_string when passed in

2003-01-10  William A. Perkins  <william.perkins@pnl.gov>

	* plot_output.f90: use do_rptdead to output 'isdead' in plot
	output 

	* block_bc_module.f90: set do_rptdead when DEAD BC's are read

	* misc_vars_module.f90: add do_rptdead flag

	* test/flow/dead-quickon/dead.lay: plot.nc path was wrong

	* scalars_module.f90: add SCALBC_BLOCK for block boundary
	conditions (for use later)
